--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+		    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Big Data Developer</h3>
+                            <div class="subheading mb-3">BARCLAYS</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2017 - Present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
@@ -74,10 +81,9 @@
 							• Transformed and documented codebase to provide programmable SMS API (WhatsApp/SMS) for healthcare product. <br/>
 							• Gained insights for front end tools - JavaScript as well as Drupal (content management framework) to enhance and optimize Apollo UI/UX design for a healthcare sponsored product. <br/>
 							• Contributed to develop Indexing based search UI using Apache Solr service as well as Elasticsearch for healthcare product. <br/>
-							• Assisted in-house product team to maintain and document of penetration & security testing by using Jenkins/Qualys for healthcare sponsored product.
 							</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2017 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2017 - December 2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -85,7 +91,6 @@
                             <div class="subheading mb-3">IMS Health</div>
                             <p>
 							• Contributed for documentation of installation and configuration user guide for the healthcare sponsored product. <br/>
-							• Produced and maintained list of adverse events as well as drugs for the healthcare sponsored product. <br/>
 							• Achieved performing migration of healthcare end-user site from older to newer version. <br/>
 							• Gained insight on hadoop, java, and maven and json script during development of the healthcare sponsored product.
 							</p>
